web/book/tests/snapshots/snapshot__internals__functional-lang-3.snap
---
source: web/book/tests/snapshot.rs
expression: "sort name (filter age > 50 (from employees))\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

