web/book/tests/snapshots/snapshot__internals__name-resolving-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nselect first_name\n"
---
SELECT
  first_name
FROM
  employees

